--- a/src/styles.css
+++ b/src/styles.css
@@ -1,74 +1,87 @@
 /* Import Google Font - Poppins */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
-*{
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
-body{
+body {
   padding: 0 10px;
   background: black;
   display: flex;
   align-items: center;
+  justify-content: space-around;
 }
-::selection{
+::selection {
   color: #fff;
   background: black;
 }
-.wrapper{
+.wrapper {
   margin-top: 20px;
-  height: 650px;
+  height: 700px;
   padding: 35px;
   background: rgb(51, 51, 51);
   border-radius: 10px;
-  box-shadow: 0 10px 15px rgba(0,0,0,0.05);
+  box-shadow: 0 10px 15px rgba(0, 0, 0, 0.05);
+  width: 80%;
 }
-.wrapper .input-field{
+.wrapper .input-field {
   opacity: 0;
   z-index: -999;
   position: absolute;
 }
-.wrapper .content-box{
+.wrapper .content-box {
   padding: 13px 20px 0;
   border-radius: 10px;
   border: 1px solid #bfbfbf;
-  height: 100%;
+  height: 80%;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-between;
 }
-.content-box .typing-text{
-  overflow: hidden;
-  max-height: 256px;
+.user-select {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 20px;
 }
-.typing-text::-webkit-scrollbar{
+.time-limit {
+  color: white;
+}
+.difficulty {
+  color: white;
+}
+.content-box .typing-text {
+  overflow: scroll;
+}
+.typing-text::-webkit-scrollbar {
   width: 0;
 }
-.typing-text p{
+.typing-text p {
   color: white;
   font-size: 21px;
   text-align: justify;
   letter-spacing: 1px;
   word-break: break-all;
 }
-.typing-text p span{
+.typing-text p span {
   position: relative;
 }
-.typing-text p span.correct{
+.typing-text p span.correct {
   color: #56964f;
 }
-.typing-text p span.incorrect{
+.typing-text p span.incorrect {
   color: #cb3439;
   outline: 1px solid #fff;
   background: #ffc0cb;
   border-radius: 4px;
 }
-.typing-text p span.active{
+.typing-text p span.active {
   color: orange;
 }
-.typing-text p span.active::before{
+.typing-text p span.active::before {
   position: absolute;
   content: "";
   height: 2px;
@@ -80,12 +93,12 @@ body{
   background: orange;
   animation: blink 1s ease-in-out infinite;
 }
-@keyframes blink{
-  50%{ 
-    opacity: 1; 
+@keyframes blink {
+  50% {
+    opacity: 1;
   }
 }
-.content-box .content{
+.content-box .content {
   width: 100%;
   margin-top: 17px;
   display: flex;
@@ -95,7 +108,7 @@ body{
   justify-content: space-between;
   border-top: 1px solid #bfbfbf;
 }
-.content button{
+.content button {
   font-weight: bold;
   outline: none;
   border: none;
@@ -108,98 +121,104 @@ body{
   background: rgb(248, 170, 26);
   transition: transform 0.3s ease;
 }
-.content button:hover{
+.content button:hover {
   color: black;
   background-color: rgb(238, 186, 91);
 }
-.content button:active{
+.content button:active {
   transform: scale(0.97);
 }
-.content .result-details{
+.content .result-details {
   display: flex;
   flex-wrap: wrap;
   align-items: center;
   width: calc(100% - 140px);
   justify-content: space-between;
 }
-.result-details li{
+.result-details li {
   display: flex;
   height: 20px;
   list-style: none;
   position: relative;
   align-items: center;
 }
-.result-details li:not(:first-child){
+.result-details li:not(:first-child) {
   padding-left: 22px;
   border-left: 1px solid #bfbfbf;
 }
-.result-details li p{
+.result-details li p {
   font-size: 19px;
   color: white;
 }
-.result-details li span{
+.result-details li span {
   display: block;
   font-size: 20px;
   margin-left: 10px;
   color: white;
 }
-li span b{
+li span b {
   font-weight: 500;
   color: white;
 }
-li:not(:first-child) span{
+li:not(:first-child) span {
   font-weight: 500;
   color: white;
 }
 @media (max-width: 745px) {
-  body{
+  body {
     flex-direction: column;
+    justify-content: space-around;
   }
-  img{
+  .user-select {
+    flex-direction: column;
+    height: 70px;
+    justify-content: space-between;
+  }
+  img {
     width: 290px;
   }
-  .wrapper{
-    padding: 20px;
+  .wrapper {
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 90%;
   }
-  .content-box .content{
-    padding: 20px 0;
-  }
-  .content-box .typing-text{
+
+  .content-box .typing-text {
     max-height: 100%;
   }
-  .typing-text p{
+  .typing-text p {
     font-size: 19px;
     text-align: left;
   }
-  .content button{
+  .content button {
     width: 100%;
     font-size: 15px;
     padding: 10px 0;
     margin-top: 20px;
   }
-  .content .result-details{
+  .content .result-details {
     width: 100%;
   }
-  .result-details li:not(:first-child){
+  .result-details li:not(:first-child) {
     border-left: 0;
     padding: 0;
   }
-  .result-details li p, 
-  .result-details li span{
+  .result-details li p,
+  .result-details li span {
     font-size: 17px;
   }
 }
 @media (max-width: 518px) {
-  .wrapper .content-box{
+  .wrapper .content-box {
     padding: 10px 15px 0;
   }
-  .typing-text p{
+  .typing-text p {
     font-size: 18px;
   }
-  .result-details li{
+  .result-details li {
     margin-bottom: 10px;
   }
-  .content button{
+  .content button {
     margin-top: 10px;
   }
 }
