--- a/src/styles.css
+++ b/src/styles.css
@@ -164,6 +164,81 @@ li:not(:first-child) span {
   font-weight: 500;
   color: white;
 }
+.parent{
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-direction: column;
+}
+.logo{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin-top: auto;
+  margin-bottom: auto;
+}
+.logoimg{
+  height: 250px;
+  margin-right: 30px;
+}
+.codeslayers{
+  color: rgb(244, 20, 20);
+  font-weight: bold;
+  font-size: 40px;
+  text-align: center;
+}
+.buttons{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+.buttonimg{
+  height: 100px;
+  object-fit: contain;
+}
+a{
+  text-decoration: none;
+}
+.single{
+  background-color: rgb(51, 51, 51);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 40px;
+  padding: 30px;
+  border-radius: 30px;
+  width: 450px;
+  cursor: pointer;
+  text-decoration: none;
+}
+.multi{
+  background-color: rgb(51, 51, 51);
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  color: white;
+  font-weight: bold;
+  font-size: 20px;
+  margin-top: 40px;
+  padding: 30px;
+  border-radius: 30px;
+  width: 450px;
+  cursor: pointer;
+  text-decoration: none;
+  margin-bottom: 30px;
+}
+.single:hover{
+  background-color: rgb(41, 40, 40);
+}
+.multi:hover{
+  background-color: rgb(41, 40, 40);
+}
 @media (max-width: 745px) {
   body {
     flex-direction: column;
@@ -182,7 +257,32 @@ li:not(:first-child) span {
     margin-bottom: 20px;
     width: 90%;
   }
-
+  .logo{
+    flex-direction: column;
+  }
+  .buttonimg{
+    height: 100px;
+    object-fit: contain;
+  }
+  .single{
+    font-size: 16px;
+    padding: 10px;
+    width: 400px;
+  }
+  .multi{
+    font-size: 16px;
+    padding: 10px;
+    width: 400px;
+  }
+  .singletext{
+    width: 70%;
+  }
+  .multitext{
+    width: 70%;
+  }
+  .codeslayers{
+    font-size: 30px;
+  }
   .content-box .typing-text {
     max-height: 100%;
   }
